# rl25_homework_2

./: README.md
armando_controller/: CMakeLists.txt  package.xml
armando_controller/src/: arm_controller_node.cpp
armando_description/: CMakeLists.txt  package.xml
armando_description/config/: armando.rviz  armando_controllers.yaml
armando_description/launch/: armando_display.launch.py
armando_description/urdf/: arm.urdf.xacro  armando_hardware_interface.xacro
armando_gazebo/: CMakeLists.txt  package.xml  setup.cfg  setup.py
armando_gazebo/install/: local_setup.sh  setup.sh
armando_gazebo/install/armando_gazebo/share/armando_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
armando_gazebo/install/armando_gazebo/share/armando_gazebo/launch/: armando_world.launch.py
armando_gazebo/install/armando_gazebo/share/armando_gazebo/urdf/: armando_camera.xacro
armando_gazebo/launch/: armando_world.launch.py
armando_gazebo/log/: latest_build
armando_gazebo/urdf/: armando_camera.xacro
ros2_iiwa/iiwa_bringup/: CMakeLists.txt  package.xml
ros2_iiwa/iiwa_bringup/launch/: iiwa.launch.py
ros2_iiwa/iiwa_description/config/: iiwa_controllers.yaml
ros2_iiwa/iiwa_description/gazebo/models/arucotag/: model.sdf
ros2_iiwa/iiwa_description/gazebo/worlds/: iiwa_aruco_world.world
ros2_iiwa/iiwa_description/urdf/: iiwa.urdf.xacro  iiwa_camera.xacro
ros2_kdl_package/: CMakeLists.txt  README.md  package.xml
ros2_kdl_package/action/: LinearTraj.action
ros2_kdl_package/config/: kdl_params.yaml
ros2_kdl_package/include/: kdl_control.h  kdl_robot.h
ros2_kdl_package/launch/: ros2_kdl_node.launch.py
ros2_kdl_package/scripts/: plot_results.py
ros2_kdl_package/src/: kdl_control.cpp  kdl_robot.cpp  linear_traj_client.cpp  ros2_kdl_node.cpp
