<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_kdl_package</name>
  <version>0.0.0</version>
  <description>Package per il controllo cinematico e basato su visione di un manipolatore con KDL e ROS2</description>
  <maintainer email="mario.selvaggio@unina.it">user</maintainer>
  <license>MIT</license>

  <!-- Buildtool -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  

  <!-- Dipendenze necessarie -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>orocos_kdl</depend>
  <depend>kdl_parser</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>urdf</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- Test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
